// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CReset.vue should accept style config prop 1`] = `
Object {
  "dark": Object {
    "bg": "#1A202C",
    "borderColor": "rgba(255, 255, 255, 0.16)",
    "color": "rgba(255, 255, 255, 0.92)",
    "placeholderColor": "rgba(255, 255, 255, 0.24)",
  },
  "light": Object {
    "bg": "yellow",
    "borderColor": "#E2E8F0",
    "color": "black",
    "placeholderColor": "#A0AEC0",
  },
}
`;

exports[`CReset.vue should have default style config 1`] = `
Object {
  "dark": Object {
    "bg": "#1A202C",
    "borderColor": "rgba(255, 255, 255, 0.16)",
    "color": "rgba(255, 255, 255, 0.92)",
    "placeholderColor": "rgba(255, 255, 255, 0.24)",
  },
  "light": Object {
    "bg": undefined,
    "borderColor": "#E2E8F0",
    "color": "#1A202C",
    "placeholderColor": "#A0AEC0",
  },
}
`;
